# rinit

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  dirs.conf  install.yml
.github/workflows/: cargo.yml  coverage.yml
ctl/: Cargo.toml
ctl/src/: main.rs  util.rs
ctl/src/command/: disable_command.rs  enable_command.rs  mod.rs  reload_command.rs  service_control_command.rs  start_command.rs  status_command.rs  stop_command.rs
ipc/: Cargo.toml
ipc/src/: async_connection.rs  connection.rs  get_host_address.rs  lib.rs  message.rs  reply.rs  request.rs  request_error.rs
parser/: Cargo.toml
parser/src/: array_parser.rs  code_parser.rs  lib.rs  section.rs
parser/src/section/: bundle_options_builder.rs  script_builder.rs  script_environment_builder.rs  section_builder.rs  service_options_builder.rs
parser/src/service/: parse_service.rs  parse_services.rs  service_builder.rs
parser/test/samples/: bundle_no_options  longrun  oneshot  oneshot_with_stop
service/: Cargo.toml
service/src/: config.rs  dirs.rs  lib.rs  service_state.rs  types.rs
service/src/graph/: dependency_graph.rs  node.rs
service/src/types/: bundle.rs  bundle_options.rs  longrun.rs  oneshot.rs  provider.rs  runlevel.rs  script.rs  script_config.rs  script_environment.rs  service.rs  service_options.rs  virtual_service.rs
src/core/: Cargo.toml
src/core/src/: config.rs  graph.rs  lib.rs  types.rs
src/core/src/graph/: dependency_graph.rs  node.rs
src/core/src/types/: bundle.rs  bundle_options.rs  config.rs  longrun.rs  oneshot.rs  provider.rs  script.rs  script_config.rs  service.rs  service_options.rs  virtual_service.rs
src/exec/: Cargo.toml
src/exec/src/: exec_script.rs  kill_process.rs  lib.rs  run_short_lived_script.rs  signal_wait.rs
src/kansei/: Cargo.toml
src/kctl/: Cargo.toml
src/kctl/src/: main.rs
src/kctl/src/command/: enable_command.rs
src/ks-ctl/: Cargo.toml
src/ks-ctl/src/: main.rs
src/ks-ctl/src/command/: disable_command.rs  enable_command.rs  mod.rs  start_command.rs  status_command.rs  stop_command.rs
src/ks-run/: Cargo.toml
src/ks-run-longrun/: Cargo.toml
src/ks-run-longrun/src/: main.rs
src/ks-run-oneshot/: Cargo.toml
src/ks-run-oneshot/src/: main.rs
src/ks-run/src/: main.rs
src/ks-svc/: Cargo.toml
src/ks-svc/src/: exec_args.rs  live_service.rs  live_service_graph.rs  longrun_runner.rs  main.rs  message_handler.rs  oneshot_runner.rs  script_runner.rs
src/ksupervisord/: Cargo.toml  build.rs
src/ksupervisord/src/: main.rs
src/message/: Cargo.toml
src/message/src/: get_host_address.rs  lib.rs  message.rs  reply.rs
src/parser/: Cargo.toml
src/parser/src/: array_parser.rs  code_parser.rs  is_empty_line.rs  lib.rs  parse_section.rs  section.rs  service.rs
src/parser/src/section/: bundle_options_builder.rs  script_builder.rs  section_builder.rs  service_options_builder.rs
src/parser/src/service/: parse_service.rs  parse_services.rs  service_builder.rs
src/parser/test/samples/: bundle  longrun_no_run
src/rpc/: Cargo.toml
src/svc/: Cargo.toml
supervision/: Cargo.toml
supervision/src/: async_connection.rs  exec_script.rs  kill_process.rs  lib.rs  live_service.rs  live_service_graph.rs  log_stdio.rs  main.rs  message_handler.rs  pidfd_send_signal.rs  request_handler.rs  run_short_lived_script.rs  signal_wait.rs  supervise_long_lived_process.rs  supervise_short_lived_process.rs
svc/: Cargo.toml
svc/src/: live_service.rs  live_service_graph.rs  main.rs  request_handler.rs
svc/src/supervision/: exec_script.rs  kill_process.rs  log_stdio.rs  main.rs  mod.rs  run_short_lived_script.rs  signal_wait.rs  supervise_long_lived_process.rs  supervise_short_lived_process.rs  supervisor.rs
