[package]
name = "rinit-ctl"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
rinit-ipc= { path = "../ipc" }
rinit-parser = { path = "../parser" }
rinit-service = { path = "../service" }
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"] }
itertools = "0.10.3"
futures = "0.3.21"
serde_json = "1.0.82"
tokio = "1.20.1"

[[bin]]
name = "rctl"
path = "src/main.rs"
