[package]
name = "rinit-ctl"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
rinit-ipc= { path = "../ipc" }
rinit-parser = { path = "../parser" }
rinit-service = { path = "../service" }
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
itertools = "0.10.5"
futures = "0.3.28"
libc = "0.2.144"
serde_json = "1.0.96"
tokio = "1.28.0"

[[bin]]
name = "rctl"
path = "src/main.rs"
