[package]
name = "rinit-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
futures = "0.3.21"
lazy_static = "1.4.0"
nix = "0.24.1"
remoc = "0.10.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
snafu = "0.7.1"
tokio = "1.19.2"
