[package]
name = "rinit-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
futures = "0.3.21"
lazy_static = "1.4.0"
nix = "0.24.2"
remoc = "0.10.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
snafu = "0.7.1"
tokio = "1.20.1"
