[package]
name = "rinit-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
futures = "0.3.28"
lazy_static = "1.4.0"
nix = "0.26.2"
remoc = "0.10.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
snafu = "0.7.4"
tokio = { version = "1.28.0", features = [ "net" ] }
