[package]
name = "rinit-service"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
serde = { version = "1.0.137", features = ["derive"] }
snafu = "0.7.1"
toml = "0.5.9"
xdg = "2.4.1"
