[package]
name = "rinit-supervision"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
rinit-ipc = { path = "../ipc" }
anyhow = { version = "1.0.58", default_features = false }
async-pidfd = "0.1.4"
async-recursion = "1.0.0"
async-scoped-local = { git = "https://github.com/rinit-org/async-scoped-local", features = [ "use-tokio" ] }
lexopt = "0.2.0"
futures = "0.3.21"
lazy_static = "1.4.0"
libc = "0.2.126"
nix = "0.24.1"
remoc = "0.10.0"
serde_json = "1.0.81"
snafu = "0.7.1"
tokio = { version = "1.19.2", features = [ "full" ] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [ "run-cargo-clippy", "run-cargo-check", "run-cargo-fmt" ] }

[[bin]]
name = "rsupervision"
path = "src/main.rs"
