[package]
name = "rinit-svc"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
rinit-ipc = { path = "../ipc" }
anyhow = { version = "1.0.58", default_features = false }
async-recursion = "1.0.0"
async-scoped-local = { git = "https://github.com/rinit-org/async-scoped-local", features = [ "use-tokio" ] }
indexmap = "1.9.1"
flexi_logger = { version = "0.22.5", default_features = false, features = ["colors", "compress", "trc", "use_chrono_for_offset"] }
futures = "0.3.21"
lazy_static = "1.4.0"
lexopt = "0.2.1"
libc = "0.2.126"
nix = "0.24.2"
remoc = "0.10.0"
serde_json = "1.0.82"
snafu = "0.7.1"
tokio = { version = "1.20.1", features = [ "macros" ] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", default_features = false }

[[bin]]
name = "rsvc"
path = "src/main.rs"

