[package]
name = "rinit-svc"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
rinit-service = { path = "../service" }
rinit-ipc = { path = "../ipc" }
anyhow = { version = "1.0.71", default_features = false }
async-recursion = "1.0.4"
async-scoped-local = { git = "https://github.com/rinit-org/async-scoped-local", features = [ "use-tokio" ] }
indexmap = "1.9.3"
flexi_logger = { version = "0.25.4", default_features = false, features = ["colors", "compress", "trc"] }
futures = "0.3.28"
lazy_static = "1.4.0"
lexopt = "0.3.0"
libc = "0.2.144"
nix = "0.26.2"
remoc = "0.10.3"
serde_json = "1.0.96"
snafu = "0.7.4"
tokio = { version = "1.28.0", features = [ "macros" ] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default_features = false }

[[bin]]
name = "rsvc"
path = "src/main.rs"

