[package]
name = "kansei-core"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
serde = { version = "1.0.136", features = ["derive"] }
snafu = "0.7.0"
toml = "0.5.8"
xdg = "2.4.1"
