[package]
name = "kansei-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansei-core = { path = "../core" }
anyhow = "1.0.51"
libc = "0.2.109"
nix = "0.23.0"
tokio = { version = "1.14.0", features = ["full"] }
