[package]
name = "kansei-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansei-core = { path = "../core" }
anyhow = "1.0.52"
async-pidfd = "0.1.4"
lazy_static = "1.4.0"
libc = "0.2.112"
nix = "0.23.1"
tokio = { version = "1.15.0", features = ["full"] }
