[package]
name = "ks-ctl"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

[dependencies]
kansei-core = { path = "../core" }
kansei-parser = { path = "../parser" }
anyhow = "1.0.52"
async-std = { version = "1.10.0", features = ["attributes"] }
bincode = "1.3.3"
clap = "3.0.0"
snafu = { version = "0.6.10", features = ["std", "futures", "futures-01"] }
