[package]
name = "ks-ctl"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

[dependencies]
kansei-core = { path = "../core" }
kansei-message = { path = "../message" }
kansei-parser = { path = "../parser" }
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
itertools = "0.10.3"
serde_json = "1.0.79"
snafu = { version = "0.7.0", features = ["futures"] }
tokio = "1.17.0"
