[package]
name = "ks-run-longrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansei-core = { path = "../core" }
kansei-exec = { path = "../exec" }
kansei-message = { path = "../message" }
anyhow = "1.0.56"
async-pidfd = "0.1.4"
lazy_static = "1.4.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
