[package]
name = "ks-run-oneshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansei-core = { path = "../core" }
kansei-exec = { path = "../exec" }
anyhow = "1.0.47"
async-pidfd = "0.1.4"
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
