[package]
name = "ks-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansei-core = { path = "../core" }
anyhow = "1.0.47"
async-std = { version = "1.10.0", features = ["attributes"] }
bincode = "1.3.3"
libc = "0.2.107"
nix = "0.23.0"
polling = "2.2.0"
