[package]
name = "ks-svc"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2021"

[dependencies]
kansei-core = { path = "../core" }
kansei-exec = { path = "../exec" }
kansei-message = { path = "../message" }
anyhow = "1.0.55"
async-pidfd = "0.1.4"
async-recursion = "1.0.0"
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
futures = "0.3.21"
lazy_static = "1.4.0"
libc = "0.2.119"
nix = "0.23.1"
serde_json = "1.0.79"
tokio = "1.17.0"
