[package]
name = "kansei-parser"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

[dependencies]
kansei-core = { path = "../core" }
async-std = "1.10.0"
futures = "0.3.18"
nix = "0.23.0"
snafu = { version = "0.6.10", features = ["std", "futures", "futures-01"] }
